--- a/CSS/css_formulaire_c.css
+++ b/CSS/css_formulaire_c.css
@@ -1,6 +1,11 @@
 /* Import de la police Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Cookie:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 /* Styles généraux pour le HTML et le body */
 html,
 body {
@@ -177,6 +182,7 @@ main {
     max-width: 1200px;
     height: 100%;
     width: 100%;
+    animation: fadeIn 2s;
 }
 
 main .content {
