--- a/CSS/css_equipe.css
+++ b/CSS/css_equipe.css
@@ -1,6 +1,11 @@
 /* Importation des polices Google */
 @import url('https://fonts.googleapis.com/css2?family=Cookie:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 /* Réinitialisation des styles par défaut */
 html, body {
     font-size: 14px;
@@ -159,6 +164,7 @@ footer {
     padding: 10px;
     display: inline-block;
     border-radius: 5%;
+    animation: fadeIn 2s;
 }
 
 .tableau {
@@ -166,6 +172,7 @@ footer {
     border-collapse: collapse;
     margin: 1%;
     box-shadow: 8px 8px 4px 4px rgba(0, 0, 0, 0.2);
+    animation: fadeIn 2s;
 }
 
 .tableau img {
