--- a/CSS/css_selection.css
+++ b/CSS/css_selection.css
@@ -1,6 +1,11 @@
 /* Importation de la police Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Cookie:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 /* Réinitialisation des styles et définition des styles de base */
 html, body {
     font-size: 14px;
@@ -165,6 +170,7 @@ footer {
     margin: 5%;
     text-align: center;
     font-family: arial;
+    animation: fadeIn 2s;
 }
 
 .panneau img {
