Arrangé nav et hamburger

--- a/CSS/css_formulaire_m.css
+++ b/CSS/css_formulaire_m.css
@@ -1,8 +1,3 @@
-@media screen and (max-width: 1020px) {
-    .main{
-        width: 90%
-    }
-}
 /* Import de la police Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Cookie:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
@@ -11,17 +6,20 @@
     to { opacity: 1; }
 }
 
-/* Styles généraux pour le HTML et le body */
-html,
-body {
+html {
+    height: 100%; /* Garder le 100% sur html pour que le body ait une référence complète */
+}
+
+/* Réinitialisation des styles par défaut */
+html, body {
     font-size: 14px;
     font-family: sans-serif;
-    height: 100%;
-    width: 100%;
+    min-height: 100vh;  /* Hauteur minimale de 100% de la fenêtre de visualisation */
     margin: 0;
-    max-width: 100%; /* Empêche le débordement */
-    overflow-x: hidden; /* Cache le défilement horizontal */
-    padding: 0; /* Supprime les paddings par défaut */
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden;  /* Empêche le défilement horizontal */
+    overflow-y: auto;  /* Active le défilement vertical si nécessaire */
 }
 
 /* Styles pour l'en-tête */
@@ -30,7 +28,7 @@ header {
     outline: 1px solid rgb(43, 23, 0);
 }
 
-/* Styles pour la partie supérieure de la page */
+/* Navigation en haut de la page */
 .haut_de_page {
     max-width: 1500px;
     margin: 0 auto;
@@ -45,7 +43,6 @@ header {
     font-size: 14px;
     font-weight: 400;
     position: relative;
-    text-align: right;
 }
 
 .haut_de_page nav {
@@ -280,9 +277,13 @@ legend {
     border: 2px solid red !important;
     background-color: #fce1e5 !important;
 }
+
+
+/* Style pour le bouton hamburger */
 .hamburger {
     display: none;
     cursor: pointer;
+    z-index: 1;
 }
 
 .hamburger div {
@@ -292,6 +293,17 @@ legend {
     margin: 6px 0;
     transition: 0.4s;
 }
+
+/* Cache la liste de navigation par défaut et affiche le menu hamburger en dessous de 1040px */
+@media (max-width: 1120px) {
+    nav ul {
+        display: none;
+    }
+    .hamburger {
+        display: block;
+    }
+}
+
 /* Style pour le menu déroulant */
 .nav-active {
     display: block;
@@ -301,6 +313,7 @@ legend {
     right: 0;
     width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
 .nav-active li {
