--- a/CSS/css_accueil.css
+++ b/CSS/css_accueil.css
@@ -10,14 +10,15 @@
 .bienvenue {
     animation: fadeIn 2s;
 }
-html {
-    height: 100%; /* Garder le 100% sur html pour que le body ait une référence complète */
-}
+
 /* Réinitialisation des styles par défaut */
 html, body {
+    font-size: 14px;
+    font-family: sans-serif;
     min-height: 100vh;  /* Hauteur minimale de 100% de la fenêtre de visualisation */
     margin: 0;
     padding: 0;
+    height: 100%;
     width: 100%;
     overflow-x: hidden;  /* Empêche le défilement horizontal */
     overflow-y: auto;  /* Active le défilement vertical si nécessaire */
@@ -33,7 +34,7 @@ header {
 
 /* Navigation en haut de la page */
 .haut_de_page {
-    max-width: 93.75em;
+    max-width: 1500px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -42,8 +43,8 @@ header {
 
 .haut_de_page li {
     list-style: none;
-    margin-right: 0.9375em;
-    font-size: 0.875em;
+    margin-right: 15px;
+    font-size: 14px;
     font-weight: 400;
     position: relative;
 }
@@ -64,22 +65,22 @@ header {
 }
 
 .haut_de_page li:last-of-type {
-    margin-right: 3.125em;
+    margin-right: 50px;
 }
 
 /* Styles du logo */
 .logo {
     font-family: Cookie;
-    padding-left: 1.875em;
-    font-size: 1.6875em;
+    padding-left: 30px;
+    font-size: 27px;
     text-transform: uppercase;
     font-weight: 400;
     color: rgb(43, 23, 0);
-    text-shadow: 0.125em 0.125em 0.125em rgb(203, 181, 127);
+    text-shadow: 2px 2px 2px rgb(203, 181, 127);
 }
 
 .logo img {
-    padding: 0.625em 1.25em;
+    padding: 10px 20px;
     vertical-align: middle;
 }
 
@@ -91,21 +92,23 @@ nav,
 }
 
 /* Styles du sous-menu */
-.nav ul .sous-menu {
-    position: absolute;
-    background-color: white;  /* Assurez-vous que le texte est lisible */
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.2); /* Ombre pour le démarquer */
-    z-index: 100; /* S'assure qu'il est au-dessus d'autres contenus */
+.sous-menu {
+    display: none; /* Cacher le sous-menu par défaut */
+    position: absolute; /* Position par rapport au parent */
+    top: 15px; /* Ajuster si nécessaire */
+    background-color: rgb(249, 243, 236);
+    border-radius: 5%;
+    padding-top: 5px;
+    text-align: left;
+    z-index: 50; /* Éviter les chevauchements */
 }
-
 
 .haut_de_page li:hover .sous-menu {
     display: block;
 }
 
-.nav ul .sous-menu li {
-    padding: 15px 20px;  /* Espacement initial plus large */
-    line-height: 25px;   /* Hauteur de ligne pour donner de l'espace entre les textes */
+.sous-menu li {
+    margin: 7px;
 }
 
 
@@ -310,7 +313,7 @@ nav ul li:hover ul.sous-menu {
 
 /* Réduction du padding autour du texte pour le rapprocher de l'image */
 .produit_accueil p{
-    background-color: ;
+    background-color: rgba(241, 230, 195, 0.78);
     font-size: 20px;
     text-align: left;
     padding: 10px;
@@ -347,7 +350,7 @@ nav ul li:hover ul.sous-menu {
     font-weight: 700;
     color: rgb(26, 17, 0);
     padding: 5px;
-    padding-left: 42%;
+    padding-left: 35%;
     list-style-position: inside;
 }
 .intro_info ul {
