--- a/CSS/css_formulaire_c.css
+++ b/CSS/css_formulaire_c.css
@@ -1,9 +1,3 @@
-@media screen and (max-width: 1020px) {
-    .main{
-        width: 90%
-    }
-    
-}
 /* Import de la police Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Cookie:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
@@ -12,14 +6,19 @@
     to { opacity: 1; }
 }
 
-/* Styles généraux pour le HTML et le body */
-html,
-body {
+html {
+    height: 100%; /* Garder le 100% sur html pour que le body ait une référence complète */
+}
+/* Réinitialisation des styles par défaut */
+html, body {
     font-size: 14px;
     font-family: sans-serif;
-    height: 100%;
-    width: 100%;
+    min-height: 100vh;  /* Hauteur minimale de 100% de la fenêtre de visualisation */
     margin: 0;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden;  /* Empêche le défilement horizontal */
+    overflow-y: auto;  /* Active le défilement vertical si nécessaire */
 }
 
 /* Styles pour l'en-tête */
@@ -28,7 +27,7 @@ header {
     outline: 1px solid rgb(43, 23, 0); /* Outline is now combined */
 }
 
-/* Styles pour la partie supérieure de la page */
+/* Navigation en haut de la page */
 .haut_de_page {
     max-width: 1500px;
     margin: 0 auto;
@@ -43,7 +42,6 @@ header {
     font-size: 14px;
     font-weight: 400;
     position: relative;
-    text-align: right; /* Moved from haut_de_page nav to haut_de_page li */
 }
 
 .haut_de_page nav {
@@ -65,7 +63,7 @@ header {
     margin-right: 50px;
 }
 
-/* Styles pour le logo */
+/* Styles du logo */
 .logo {
     font-family: Cookie;
     padding-left: 30px;
@@ -81,7 +79,6 @@ header {
     vertical-align: middle;
 }
 
-/* Styles pour les sous-éléments dans l'en-tête */
 .logo,
 nav,
 .haut_de_page li,
@@ -89,7 +86,7 @@ nav,
     display: inline-block;
 }
 
-/* Styles pour les sous-menus */
+/* Styles du sous-menu */
 .sous-menu {
     display: none; /* Cacher le sous-menu par défaut */
     position: absolute; /* Position par rapport au parent */
@@ -265,9 +262,12 @@ fieldset {
     border: 2px solid red !important;
     background-color: #fce1e5 !important;
 }
+
+/* Style pour le bouton hamburger */
 .hamburger {
     display: none;
     cursor: pointer;
+    z-index: 1;
 }
 
 .hamburger div {
@@ -279,7 +279,14 @@ fieldset {
 }
 
 /* Cache la liste de navigation par défaut et affiche le menu hamburger en dessous de 1040px */
-
+@media (max-width: 1120px) {
+    nav ul {
+        display: none;
+    }
+    .hamburger {
+        display: block;
+    }
+}
 
 /* Style pour le menu déroulant */
 .nav-active {
@@ -290,6 +297,7 @@ fieldset {
     right: 0;
     width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
 .nav-active li {
