--- a/CSS/css_selection.css
+++ b/CSS/css_selection.css
@@ -1,11 +1,3 @@
-@media screen and (max-width: 1020px) {
-    .mains-s{
-        width: 90%
-    }
-
-}
-    
-
 /* Importation de la police Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Cookie:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
@@ -14,7 +6,7 @@
     to { opacity: 1; }
 }
 
-/* Réinitialisation des styles et définition des styles de base */
+/* Réinitialisation des styles par défaut */
 html, body {
     font-size: 14px;
     font-family: sans-serif;
@@ -26,11 +18,10 @@ html, body {
 /* Styles de l'en-tête */
 header {
     background-color: rgb(255, 255, 255);
-    outline: 1px;
-    outline-color: rgb(43, 23, 0);
-    outline-style: solid;
+    outline: 1px solid rgb(43, 23, 0); /* Ajout d'une bordure solide */
 }
 
+/* Navigation en haut de la page */
 .haut_de_page {
     max-width: 1500px;
     margin: 0 auto;
@@ -57,22 +48,16 @@ header {
     text-transform: uppercase;
 }
 
-.haut_de_page a:hover {
-    color: rgb(43, 23, 0);
-}
-
+.haut_de_page a:hover,
 .haut_de_page a:active {
     color: rgb(43, 23, 0);
 }
 
-.haut_de_page nav, ul, li {
-    text-align: right;
-}
-
-.haut_de_page li:last-of-type{
+.haut_de_page li:last-of-type {
     margin-right: 50px;
 }
 
+/* Styles du logo */
 .logo {
     font-family: Cookie;
     padding-left: 30px;
@@ -91,11 +76,11 @@ header {
 .logo,
 nav,
 .haut_de_page li,
-.logo img{
+.logo img {
     display: inline-block;
 }
 
-/* Styles pour les sous-menus */
+/* Styles du sous-menu */
 .sous-menu {
     display: none; /* Cacher le sous-menu par défaut */
     position: absolute; /* Position par rapport au parent */
@@ -115,7 +100,9 @@ nav,
     margin: 7px;
 }
 
-/* Pour que le footer reste au bas de la page */
+
+
+/* Conteneur de la page et enveloppe du contenu */
 #page-container {
     position: relative;
     min-height: 100vh;
@@ -237,6 +224,19 @@ div.produits {
     flex-wrap: wrap ;
     justify-content: center;
 }
+.hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+.hamburger div {
+    width: 30px;
+    height: 3px;
+    background-color: black;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+/* Style pour le bouton hamburger */
 .hamburger {
     display: none;
     cursor: pointer;
